--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,14 @@
             android:textSize="25dp">
 
         </TextView>
+
         <EditText
             android:id="@+id/insertNum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
+            android:inputType="number" />
+
         <TextView
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -35,10 +36,11 @@
         </TextView>
         <TextView
             android:id="@+id/result"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:textSize="30dp"
             android:text="">
 
@@ -64,8 +66,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/black"
-            android:text="@string/_2"
-            android:onClick="base2"/>
+            android:onClick="base2"
+            android:text="@string/_2" />
 
         <Button
             android:id="@+id/Button2"
@@ -73,6 +75,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
+            android:onClick="base3"
             android:text="3" />
 
         <Button
@@ -81,6 +84,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
+            android:onClick="base4"
             android:text="4" />
 
         <Button
@@ -90,6 +94,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
+            android:onClick="base5"
             android:text="5" />
 
         <Button
@@ -97,6 +102,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:background="@color/black"
+            android:onClick="base6"
             android:text="6" />
 
         <Button
@@ -105,6 +111,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
+            android:onClick="base7"
             android:text="7" />
 
         <Button
@@ -113,6 +120,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
+            android:onClick="base8"
             android:text="8" />
 
         <Button
@@ -121,6 +129,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:background="@color/black"
+            android:onClick="base9"
             android:text="9" />
 
         <Button
@@ -128,14 +137,15 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:background="@color/black"
-            android:text="10" />
+            android:text="Null" />
 
         <Button
             android:id="@+id/Button10"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:background="@color/black"
-            android:text="11" />
+            android:onClick="base16"
+            android:text="16" />
 
         <Button
             android:id="@+id/Button11"
@@ -143,7 +153,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
-            android:text="12" />
+            android:text="MR" />
 
         <Button
             android:id="@+id/Button12"
@@ -151,28 +161,28 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:background="@color/black"
-            android:text="13" />
+            android:text="MC" />
 
         <Button
             android:id="@+id/Button13"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/black"
-            android:text="14" />
+            android:text="MW" />
 
         <Button
             android:id="@+id/Button14"
             android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
-            android:text="15" />
+            android:text="M2" />
 
         <Button
             android:id="@+id/Button15"
             android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
-            android:text="16" />
+            android:text="M2R" />
 
         <Button
             android:id="@+id/ButtonC"
@@ -180,7 +190,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
             android:background="@color/black"
-            android:text="c" />
+            android:onClick="Reset"
+            android:text="C" />
 
     </GridLayout>
 </RelativeLayout>
